<resources>
    <string name="app_name">黄水东调</string>
    <string name="action_settings">Settings</string>

    <!-- 登陆 -->
    <string name="forget_passwords">忘记密码?</string>
    <string name="sign_in">登　录</string>
    <string name="system_phone_number">请输入手机号</string>

    <string name="system_pwd">请输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="title_activity_buss">BussActivity</string>
    <string name="password_length">密码长度为6到20位</string>
    <string name="formatting_error">您输入的手机号码不合法</string>
    <string name="input_error">您已连续输错5次密码，请等待一分钟后重试</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="system_verification_code">请输入验证码</string>
    <string name="next_step">下一步</string>
    <string name="get_verifying_code">获取验证码</string>
    <string name="second">秒</string>
    <string name="complete">完成</string>
    <string name="newpwd">新   密   码</string>
    <string name="newpwd_hint">请输入6位以上的数字或字母</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="confirm_pwds">请再次填写密码</string>
    <!-- 首页 -->
    <string name="device_cloud">设备云</string>
    <string name="task">巡检人员手机端</string>

    <string name="statistic">报表管理</string>
    <string name="alarm">报 警</string>
    <string name="head_task">任 务</string>
    <string name="defect">消缺管理</string>
    <string name="look_all">查看全部</string>
    <string name="kpi">KPI</string>
    <string name="task_board">任务看板</string>
    <string name="pending">待执行</string>
    <string name="executing">执行中</string>
    <string name="my_follow">我的关注</string>
    <string name="equiment_name">设备名称:</string>
    <string name="equiment_code">设备编号:</string>
    <string name="statu">状　　态:</string>
    <string name="process_position">区域位置:</string>
    <string name="abolish_concern">取消关注</string>
    <string name="task_name">任务名称:</string>
    <string name="route_time">时&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;间:</string>
    <string name="transactor">执&#160;&#160;行&#160;&#160;人:</string>
    <string name="statu_s">状&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;态:</string>
    <string name="defect_name">缺陷名称:</string>
    <string name="code_s">编　　号:</string>
    <string name="level">等　　级:</string>
    <string name="home_follow">关注</string>
    <string name="home_task">任务</string>
    <string name="home_self">我的</string>
    <string name="home_message">消息</string>

    <!-- 我的模块-->
    <string name="personal_information">个人信息</string>
    <string name="modify_password">修改密码</string>
    <string name="editors_head">编辑头像</string>
    <string name="safe_exit">安全退出</string>
    <string name="set_up">设置</string>
    <string name="is_open_message">是否开启消息通知</string>
    <string name="home_set_up">首页模块设置</string>
    <string name="home_overview">首页概览信息设置</string>
    <string name="self_task">任务</string>
    <string name="follow">关 注</string>
    <string name="version">版本信息</string>
    <string name="switch_phone">切换账号</string>
    <string name="exite_login">退出登录</string>
    <string name="modify_pwd">修改密码</string>
    <string name="home_setup">首页设置</string>
    <string name="self_voicer_set">语音设置</string>
    <string name="feedback">意见反馈</string>
    <string name="user">账　　号</string>
    <string name="old_pwd">旧 密 码</string>
    <string name="please_number">请输入账号</string>
    <string name="please_old_pwd">请输入旧密码</string>
    <string name="please_new_pwd">请输入新密码</string>
    <string name="please_new_pwds">请确认密码</string>
    <string name="self_hint">注：密码为6-20位的数字或字母</string>
    <string name="pwdidentical">新密码与旧密码不能相同</string>

    <string name="your_name">您的姓名</string>
    <string name="phoneNumber">手机号码</string>
    <string name="category">意见类别</string>
    <string name="please_category">请将您的意见反馈给我们</string>
    <string name="leaving_message">您可以在这里给我们留言，我们将在一个工作日内尽快回复您</string>
    <string name="char_lenth">0/200</string>
    <string name="imagemax">添加相关图片，最多4张</string>
    <string name="detection_update">检测更新</string>
    <string name="send_verification_code">验证码即将发送到您的手机</string>
    <string name="send_verification_error">获取验证码失败,请联系管理员</string>
    <string name="phone_is_empty">手机号码不能为空</string>
    <string name="verifymobile_empty">请输入验证码</string>
    <string name="verifymobile_error">验证码错误，请重新输入</string>
    <string name="verifymobile_sucess">手机号验证成功</string>
    <string name="modifypwd_error">修改密码失败</string>
    <string name="pwdstrength">新密码必须包含大小写字母和数字</string>
    <string name="newpwd_empty">新密码不能为空</string>
    <string name="confirm_pwd_empty">确认密码不能为空</string>
    <string name="pwdinequality">新密码和确认密码不一致</string>
    <string name="pwdlength">密码最短为6位</string>
    <string name="pwdNotSame">新密码和旧密码不能相同</string>
    <string name="account_empty">账号不能为空</string>
    <string name="oldpwd_empty">旧密码不能为空</string>
    <string name="updata_success">修改密码成功</string>
    <string name="updata_error">修改密码失败</string>
    <string name="old_incorrect">旧密码不正确</string>
    <string name="new_pwdlength">密码长度为6-20位 </string>
    <string name="task_excute">执行</string>
    <string name="home_more">更多</string>
    <string name="home_data">关键指标</string>

    <string name="home_weather_degress">°C</string>
    <string name="home_degree">°C</string>
    <string name="home_city">市</string>
    <string name="home_time_outoffrange">时间未到，无可查看数据</string>
    <string name="home_rain">雨</string>
    <string name="home_snow">雪</string>
    <string name="home_cloudy">多云</string>
    <string name="home_sunny">晴</string>
    <string name="home_nodata_tip">暂无数据</string>
    <string name="home_data_description">关键指标实时值显示</string>
    <string name="home_default_city">北京</string>
    <string name="follow_equipment_name">设备名称：</string>
    <string name="follow_equipment_code">设备编码：</string>
    <string name="foolow_equipment_process">区域：</string>
    <string name="follow_equipment_org">所属组织：</string>
    <string name="follow_fault_name">名称：</string>
    <string name="follow_fault_code">缺陷编码：</string>
    <string name="follow_fault_level">等级：</string>
    <string name="follow_fault_person">处理人：</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="home_menu_cancle">取消</string>

    <string name="hint_login_account">请输入用户名</string>
    <string name="request_faild_retry">请求失败,请稍后重试</string>
    <string name="no_more_data">已经到底了哦</string>
</resources>
