<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:checked="true"
        android:icon="@drawable/navigation_menu_item_home"
        android:title="@string/home" />

    <item
        android:id="@+id/alarm"
        android:icon="@drawable/navigation_menu_item_alarm"
        android:title="@string/alarm" />

    <item
        android:id="@+id/follow"
        android:icon="@drawable/navigation_menu_item_follow"
        android:title="@string/home_follow" />
    <item
        android:id="@+id/message"
        android:icon="@drawable/navigation_menu_item_message"
        android:title="@string/home_message" />

    <item
        android:id="@+id/self"
        android:icon="@drawable/navigation_menu_item_self"
        android:title="@string/home_self" />

</menu>