<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:layout_marginTop="7dp"
    android:background="@drawable/kpi_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/task_name" />

                <TextView
                    android:id="@+id/route_task_name"
                    style="@style/follow_equiment_tv"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/statu_s" />

                <TextView
                    android:id="@+id/statu_tv"
                    style="@style/follow_equiment_tv" />
            </LinearLayout>

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/route_time" />

                <TextView
                    android:id="@+id/route_time_tv"
                    style="@style/follow_equiment_tv" />
            </LinearLayout>

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/transactor" />

                <TextView
                    android:id="@+id/transactor_tv"
                    style="@style/follow_equiment_tv" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="right">

        <TextView
            android:id="@+id/cancler_follow_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/task_board_red_shape"
            android:text="@string/abolish_concern"
            android:textColor="#E56B6B"
            android:textSize="@dimen/fs13" />
    </LinearLayout>
</LinearLayout>
