<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/title_common" />

    <LinearLayout
        android:id="@+id/set_up_ll"
        style="@style/self_ll">

        <View
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@mipmap/department" />

        <TextView
            style="@style/self_tv"
            android:text="@string/is_open_message" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:track="@drawable/swich_selector" />
    </LinearLayout>

    <View style="@style/self_v" />


    <LinearLayout
        android:id="@+id/home_setup_ll"
        style="@style/self_ll">

        <View
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@mipmap/department" />

        <TextView
            style="@style/self_tv"
            android:text="@string/home_set_up" />

        <View
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_icon" />
    </LinearLayout>

    <View style="@style/self_v" />

    <LinearLayout
        android:id="@+id/home_overview_ll"
        style="@style/self_ll">

        <View
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@mipmap/department" />

        <TextView
            style="@style/self_tv"
            android:text="@string/home_overview" />

        <View
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/right_icon" />
    </LinearLayout>

    <View style="@style/self_v" />
</LinearLayout>
