<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    android:background="@drawable/kpi_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fault_iv"
            android:layout_width="85dp"
            android:layout_height="90dp"
            android:layout_marginLeft="4dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="缺陷类型:" />

                <TextView
                    android:id="@+id/defect_name_tv"
                    style="@style/follow_equiment_tv"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/code_s" />

                <TextView
                    android:id="@+id/defect_code_tv"
                    style="@style/follow_equiment_tv"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/statu" />

                <TextView
                    android:id="@+id/defect_statu_tv"
                    style="@style/follow_equiment_tv" />
            </LinearLayout>

            <LinearLayout style="@style/follow_equiment_ll">

                <TextView
                    style="@style/follow_equiment_tv"
                    android:text="@string/level" />

                <TextView
                    android:id="@+id/fault_level_tv"
                    style="@style/follow_equiment_tv" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="right">

        <TextView
            android:id="@+id/cancler_follow_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/task_board_red_shape"
            android:text="@string/abolish_concern"
            android:textColor="#E56B6B"
            android:textSize="@dimen/fs13" />
    </LinearLayout>
</LinearLayout>
